Final 1st update

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <img id="paper" src="https://previews.123rf.com/images/sabelskaya/sabelskaya1603/sabelskaya160300237/54123281-one-hand-hand-showing-five-fingers-.jpg" alt="" height="150" width="150" onclick="rpsGame(this)">
                 <img id="scissor" src="https://img.freepik.com/free-vector/realistic-hand-peace-sign-background_23-2148005626.jpg?w=2000" alt="" height="150" width="150" onclick="rpsGame(this)">
             </div>
+            <button class="replay" onClick="history.go(0);"><strong>Replay</strong></button>
        </div>  
        <script src="index.js"></script>
 </body>
